--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <div class="box" id="box1">
-        <a href="https://www.facebook.com/profile.php?id=100023833698195">
+        <a href="https://www.facebook.com/profile.php?id=100023833698195" target="_blank">
           <i class="fa-brands fa-facebook"></i>
         </a>
         <span class="numbers" data-counts="372">000</span>
@@ -21,7 +21,7 @@
       </div>
 
       <div class="box" id="box2">
-        <a href="https://www.linkedin.com/in/bishwakushwaha/">
+        <a href="https://www.linkedin.com/in/bishwakushwaha/" target="_blank">
           <i class="fa-brands fa-linkedin"></i>
         </a>
         <span class="numbers" data-counts="235">000</span>
@@ -29,7 +29,7 @@
       </div>
 
       <div class="box" id="box3">
-        <a href="https://github.com/bishwa-code">
+        <a href="https://github.com/bishwa-code" target="_blank">
           <i class="fa-brands fa-github"></i>
         </a>
         <span class="numbers" data-counts="275">000</span>
@@ -37,7 +37,7 @@
       </div>
 
       <div class="box" id="box4">
-        <a href="https://twitter.com/bxk1415">
+        <a href="https://twitter.com/bxk1415" target="_blank">
           <i class="fa-brands fa-twitter"></i>
         </a>
         <span class="numbers" data-counts="455">000</span>
